<resources>
    <string name="app_name">FlightView</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="e_mail_address">E-Mail Address</string>
    <string name="password">Password</string>
    <string name="login_register">Login - Register</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>

    <string name="facebook_app_id">5332694476770005</string>
    <string name="fb_login_protocol_scheme">fb5332694476770005</string>
    <string name="facebook_client_token">a5ce263d48cd8673ec4eb994a77d9d97</string>


</resources>